# handball-scraping

./: .gitignore  README.md  pyproject.toml  url.json
handball-scraping/: sandbox.ipynb  sandbox_formating.ipynb  sandbox_scraping.ipynb  scrap_info_joueurs.py  scrap_stats_gardiens.py  scrap_stats_joueurs.py  test_selenium.ipynb
handball-scraping/lfh/: scrap_stats_joueuses.py
handball-scraping/lnh/: infos_preprocessing_pipeline.py  merge-csv.py  scrap_info_joueurs.py  scrap_stats_gardiens.py  scrap_stats_joueurs.py  stats_preprocessing_pipeline.py
streamlit-visualization/: test.py
