[tool.poetry]
name = "handball-scraping"
version = "0.1.0"
description = "Project to scrap data from European Handball leagues' websites"
authors = ["bpugnaire"]
readme = "README.md"
packages = [{include = "handball_scraping"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.2"
requests = "^2.28.1"
selenium = "^4.7.2"
urllib3 = "^1.26.13"
html5lib = "^1.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
